[Bug]todo aside scroll overflow 시 생성되도록 수정 (#61)

--- a/client/public/css/app.css
+++ b/client/public/css/app.css
@@ -355,6 +355,7 @@ todo-card.place {
 todo-aside {
   height: 100vh;
   max-height: 100vh;
+  overflow-y: auto;
   position: fixed;
   right: -100%;
   width: 30%;
